cleaned up code and fixed the scrollbar

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -54,3 +54,43 @@ body {
   opacity: 0;
   transform: translateY(50vw);
 }
+
+$scrollbar-width: 20px;
+$scrollbar-track-width: 15px;
+html, body {
+  background-color: $dark-gray;
+
+  &::-webkit-scrollbar-track {
+    background: $deep-gray;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $mid-gray;
+
+    &:hover {
+      background-color: $basic-gray;
+    }
+  }
+}
+
+* {
+  &::-webkit-scrollbar {
+    width: $scrollbar-width;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: none;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border: ($scrollbar-width - $scrollbar-track-width) solid rgba(0, 0, 0, 0);
+    width: $scrollbar-width;
+    background-clip: padding-box;
+    -webkit-border-radius: 15px;
+    background-color: $deep-gray;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: $dark-gray;
+  }
+}
