--- a/resources/sass/components/event/_program_and_info.scss
+++ b/resources/sass/components/event/_program_and_info.scss
@@ -2,7 +2,7 @@
   padding: 0 !important;
   overflow: hidden;
 
-  .event-program_and_info-content{
+  .event-program_and_info-content {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -10,23 +10,6 @@
     overflow-y: scroll;
     padding: $padding-huge $padding-huge $padding-huge + $border-radius-big;
 
-    //TODO: Why doesn't this work?
-    &::-webkit-scrollbar-track {
-      background: none;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      border: 5px solid rgba(0, 0, 0, 0);
-      width: 15px;
-      background-clip: padding-box;
-      -webkit-border-radius: 15px;
-      background-color: $deep-gray;
-      -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);
-    }
-
-    &::-webkit-scrollbar-thumb:hover {
-      background-color: $dark-gray;
-    }
   }
 
   .event-program {
